# uaio

./: CMakeLists.txt  Kconfig  LICENSE  README.md  TODO.md  activate.sh  fdmon.h  generic.c  generic.h  idf_component.yml  select.c  select.h  semaphore.c  semaphore.h  sleep.c  sleep.h  taskpool.c  taskpool.h  uaio.c  uaio.h
include/: uaio.h  uaio_generic.c  uaio_generic.h
